public/main/css/window.css
button {
    border: none;
    margin: 0;
    padding: 0;
    width: auto;
    overflow: visible;
    background: transparent;
    color: inherit;
    font: inherit;
    line-height: normal;
    -webkit-font-smoothing: inherit;
    -moz-osx-font-smoothing: inherit;
    -webkit-appearance: none;
}

/*----- windows -----*/

.window_container {
    background-color:var(--window-container-background);
    border: var(--window-border);
    box-shadow: var(--window-shadow);
    border-radius: var(--window-border-radius);
    position: absolute;
    z-index: 999;
}

.window_interior {
    margin: var(--window-padding);
    height: 100%;
    display: flex;
    flex-direction: column;
}

.window_top {
    overflow:hidden;
	cursor: grab;
    background: rgba(150,138,255,1);
    background: -moz-linear-gradient(left, rgba(150,138,255,1) 0%, rgba(103,250,179,1) 100%);
    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(150,138,255,1)), color-stop(100%, rgba(103,250,179,1)));
    background: -webkit-linear-gradient(left, rgba(150,138,255,1) 0%, rgba(103,250,179,1) 100%);
    background: -o-linear-gradient(left, rgba(150,138,255,1) 0%, rgba(103,250,179,1) 100%);
    background: -ms-linear-gradient(left, rgba(150,138,255,1) 0%, rgba(103,250,179,1) 100%);
    background: linear-gradient(to right, rgba(150,138,255,1) 0%, rgba(103,250,179,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#968aff', endColorstr='#67fab3', GradientType=1 );
    padding: 0 3px 6px 6px;
	.is-pointer-down & {
		cursor: grabbing;
	}
}

.window_title {
    color: white;
    float:left;
    width:calc(100% - 40px);
    letter-spacing:0px;
    font-size:9px;
    font-family: nineteen93, maru;
    text-rendering: optimizeLegibility;
    line-height:1em;
    margin-top: 6px;
}

.window_control {
    display:flex;
    float: right;
}

.smallbox {
    width: 15px;
    height: 15px;
}

.minimize, .maximize {
    cursor:help;
}

.window_description {
    display: block;
    background: var(--window-text-background);
    border-radius: calc(var(--window-border-radius) - 2px);
    overflow-y: scroll;
    padding: 10px;
    height: 100%;
    margin-top:calc(var(--window-padding) + 1px);
    margin-bottom: 1px;
}

.window_description img {
    margin: 0;
    padding: 0;
    display: inline;
}

/*----- dark mode support -----*/

@media (prefers-color-scheme: dark) {

    .window_container {
        background-color:var(--window-container-background-dark);
        border: var(--window-border-dark);
        box-shadow: var(--window-shadow-dark);
    }

    .window_description {
        background: var(--window-text-background-dark);
    }

    .window_title {
        color: var(--window-title-color-dark);
        background-color: var(--window-title-background-dark);
        &:hover{
            background-color: var(--window-title-background-clicked-dark);
        }
    }

    .minimize_control {
        background:var(--window-title-background-dark);
    }
    
    .maximize_control {
        border:2px solid var(--window-title-background-dark);
    }

}

/*----- window section size and initial locations -----*/

.buttons {
    top:33vh;
    left:8vh;
    width: 394px;
}

.buttons .window_description{
    height: 400px;
    line-height: 0;
    font-size: 0;
}

.buttons .window_description img {
    width: 88px;
    object-fit: none;
}

.chatbox {
    top:5vh;
    right:5vh;
    width: 390px;
}

.chatbox .window_description{
    height: 380px;
}

.todo {
    top:5vh;
    left:5vh;
    width: 270px;
}

.todo .window_description{
    height: 158px;
    font-family: nineteen93, maru; 
    font-size: 9px;
}

.webrings {
    top:calc(5vh + 500px);
    right:15vh;
    width: 331px;
}

.webrings .window_description{
    height: 270px;
    font-family: nineteen93, maru; 
    text-align: center;
    font-size: 9px;
}

